# netwire-sdl-challenges

./: .gitignore  Challenge2.hs  README.md  examples.cabal
src/: challenge01.hs  challenge02.hs  challenge03.hs  challenge04.hs  challenge05.hs  challenge06.hs  keys.hs
src/common/: drawing.hs  input.hs  lifecycle.hs
