name: netwire-sdl-challenges
description: Code to accompany blog post "Getting Started with Netwire and SDL"
version: 0.0.1
cabal-version: >= 1.14
build-type: Simple
license: GPL
copyright: Oliver Charles
author: Oliver Charles

executable challenge01
  default-language: Haskell2010
  hs-source-dirs: src
  build-depends:
    base >= 4.5,
    sdl2,
    netwire
  main-is: challenge01.hs

executable challenge02
  default-language: Haskell2010
  hs-source-dirs: src
  build-depends:
    base >= 4.5,
    sdl2,
    netwire,
    containers
  main-is: challenge02.hs

executable challenge03
  default-language: Haskell2010
  hs-source-dirs: src
  build-depends:
    base >= 4.5,
    sdl2,
    netwire,
    containers
  main-is: challenge03.hs
