name: netwire-sdl-challenges
description: Code to accompany blog post "Getting Started with Netwire and SDL"
version: 0.0.1
cabal-version: >= 1.14
build-type: Simple
license: GPL
copyright: Oliver Charles
author: Oliver Charles

executable challenge01
  default-language: Haskell2010
  hs-source-dirs: src
  build-depends:
    base >= 4.5,
    sdl2,
    mtl,
    netwire
  main-is: challenge01.hs
  ghc-options: -Wall -fno-warn-unused-do-bind


executable challenge02
  default-language: Haskell2010
  hs-source-dirs: src
  build-depends:
    base >= 4.5,
    sdl2,
    mtl,
    netwire
  main-is: challenge02.hs
  ghc-options: -Wall -fno-warn-unused-do-bind


executable challenge03
  default-language: Haskell2010
  hs-source-dirs: src
  build-depends:
    base >= 4.5,
    sdl2,
    mtl,
    netwire
  main-is: challenge03.hs
  ghc-options: -Wall -fno-warn-unused-do-bind


executable challenge04
  default-language: Haskell2010
  hs-source-dirs: src
  build-depends:
    base >= 4.5,
    sdl2,
    mtl,
    netwire
  main-is: challenge04.hs
  ghc-options: -Wall -fno-warn-unused-do-bind


executable challenge05
  default-language: Haskell2010
  hs-source-dirs: src
  build-depends:
    base >= 4.5,
    sdl2,
    mtl,
    netwire
  main-is: challenge05.hs
  ghc-options: -Wall -fno-warn-unused-do-bind


executable challenge06
  default-language: Haskell2010
  hs-source-dirs: src
  build-depends:
    base >= 4.5,
    sdl2,
    mtl,
    netwire
  main-is: challenge06.hs
  ghc-options: -Wall -fno-warn-unused-do-bind
